--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
 </head>
 
 <body>
+    <canvas id="canvas" width="800" height="800"></canvas>
+    <div class="toolbox">
+        <button id="decrease">-</button>
+        <span class="size">20</span>
+        <button id="increase">+</button>
+        <input type="color" id="color">
+        <button id="clear">Clear canvas</button>
+    </div>
     <script src="script.js"></script>
 </body>
 
