--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
 </head>
 
 <body>
-    <canvas id="canvas" width="800" height="800"></canvas>
+    <canvas id="canvas" width="800" height="700"></canvas>
     <div class="toolbox">
         <button id="decrease">-</button>
-        <span class="size">20</span>
+        <span id="size">10</span>
         <button id="increase">+</button>
         <input type="color" id="color">
         <button id="clear">Clear canvas</button>
     </div>
+
     <script src="script.js"></script>
 </body>
 
